# juce-react-plugin-example

./: .clang-format  .gitmodules  .prettierignore  CMakeLists.txt  README.md  example.filtergraph  justfile  package.json  scripts.js
main/: .gitignore  CMakeLists.txt  JUCE.cmake  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WebSocketServer.h  asio.cmake  dependencies.cmake  json.cmake  package.json  websocketpp.cmake
main/Source/: PluginProcessor.cpp  PluginProcessor.h
main/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WebSocketServer.h  store.cpp  store.h
plugin/: CMakeLists.txt  Info.plist  PluginEditor.cpp
renderer/: build.js  package.json
renderer/src/: App.js  App.test.js  GainKnob.js  Knob.js  Level.js  LevelMeter.js  LevelView.js  Spectrum.js  SpectrumView.js  index.css
renderer/src/store/: StoreProvider.js  createWebSocketStore.js  index.js  useStore.js
